# rymder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  download-sdk-server.sh  release.toml
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
src/: errors.rs  generated.rs  lib.rs  proto.rs  sdk.rs
src/sdk/: gameserver.rs
tests/: all.rs
update/: Cargo.toml
update/src/: main.rs
