[package]
name = "rymder"
version = "0.2.2"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "Unofficial agones client SDK"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rymder"
homepage = "https://github.com/EmbarkStudios/rymder"
repository = "https://github.com/EmbarkStudios/rymder"
keywords = ["agones", "games", "multiplayer", "k8s"]
readme = "README.md"

[features]
default = []
# Enables the Player Tracking https://agones.dev/site/docs/guides/player-tracking/
# alpha feature
player-tracking = []

[dependencies]
async-stream = "0.3"
chrono = "0.4"
futures-util = "0.3"
http = "0.2"
prost = "0.9"

[dependencies.tokio]
version = "1.0"
default-features = false
features = ["sync", "time"]

[dependencies.tonic]
version = "0.6"
default-features = false
features = [
    "codegen",
    "transport",
    "prost",
]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
# revert tonic to 2018 edition so opentelemetry can use it
tonic = { git = "https://github.com/hyperium/tonic", rev = "101f2f76d4a62" } # branch = master
tonic-build = { git = "https://github.com/hyperium/tonic", rev = "101f2f76d4a62" } # branch = master
