[package]
name = "rymder"
version = "0.6.1"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
description = "Unofficial agones client SDK"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rymder"
homepage = "https://github.com/EmbarkStudios/rymder"
repository = "https://github.com/EmbarkStudios/rymder"
keywords = ["agones", "games", "multiplayer", "k8s"]
categories = ["game-development"]
readme = "README.md"

[features]
default = []
# Enables the Player Tracking https://agones.dev/site/docs/guides/player-tracking/
# alpha feature
player-tracking = []

[dependencies]
async-stream = "0.3"
futures-util = "0.3"
http = "0.2"
prost = "0.12"
time = { version = "0.3", default-features = false }

[dependencies.tokio]
version = "1.0"
default-features = false
features = ["sync", "time"]

[dependencies.tonic]
version = "0.10"
default-features = false
features = ["codegen", "transport", "prost"]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
