[package]
name = "update"
version = "0.1.0"
edition = "2018"
description = "Updates the repo to a new version of agones"
publish = false

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zip = "0.6"
tonic-build = { version = "0.7", default-features = false, features = [
    "prost",
    "transport",
] }
